--- a/css/main.css
+++ b/css/main.css
@@ -162,7 +162,7 @@ body {
   height: 218px;
   width: 128px;
   margin: 0 auto;
-  background: url(../img/pixelme.png);
+  background: url(../img/background_img.jpg);
 }
 
 i.service-icon {
