--- a/css/main.css
+++ b/css/main.css
@@ -162,7 +162,7 @@ body {
   height: 218px;
   width: 128px;
   margin: 0 auto;
-  background: url();
+  /*background: url();*/
 }
 
 i.service-icon {
