--- a/css/main.css
+++ b/css/main.css
@@ -283,7 +283,7 @@ i.scroll:hover {
 @media (max-width: 768px) {
 
   .header {
-	background: url(../img/bg.jpg) no-repeat center center scroll;
+	background: url(../img/bg-1.png) no-repeat center center scroll;
   }
 
   .callout {
