--- a/css/main.css
+++ b/css/main.css
@@ -132,7 +132,7 @@ body {
   height: 100%;
   width: 100%;
   position: relative;
-  background: url(../img/bg-1.png) no-repeat center center fixed;
+  background: url(../img/bg-2.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
