--- a/css/main.css
+++ b/css/main.css
@@ -132,7 +132,7 @@ body {
   height: 100%;
   width: 100%;
   position: relative;
-  background: url(../img/bg-1.png) no-repeat center center fixed;
+  background: url(../img/im1.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -283,7 +283,7 @@ i.scroll:hover {
 @media (max-width: 768px) {
 
   .header {
-	background: url(../img/bg-1.png) no-repeat center center scroll;
+	background: url(../img/im1.jpg) no-repeat center center scroll;
   }
 
   .callout {
