--- a/css/main.css
+++ b/css/main.css
@@ -283,7 +283,7 @@ i.scroll:hover {
 @media (max-width: 768px) {
 
   .header {
-	background: url(../img/im1.jpg) no-repeat center center scroll;
+	background: url(../img/lateral.jpg) no-repeat center center scroll;
   }
 
   .callout {
